cloud/techchallenger-k8s/analytics-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: techchallenger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
        - name: analytics-service
          image: docker.io/robertoribeiroo/analytics-service:latest
          ports:
            - containerPort: 8005
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 400m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: techchallenger
spec:
  selector:
    app: analytics-service
  ports:
    - port: 8005
      targetPort: 8005
