cloud/techchallenger-k8s/auth-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-postgres
  namespace: techchallenger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-postgres
  template:
    metadata:
      labels:
        app: auth-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres
  namespace: techchallenger
spec:
  selector:
    app: auth-postgres
  ports:
  - port: 5432
