cloud/techchallenger-k8s/evaluation-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: techchallenger
spec:
  replicas: 2
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      containers:
        - name: evaluation-service
          image: 007188159471.dkr.ecr.us-east-1.amazonaws.com/evaluation-service:latest
          ports:
            - containerPort: 8004
          resources:
            requests:
              cpu: 150m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: techchallenger
spec:
  selector:
    app: evaluation-service
  ports:
    - port: 8004
      targetPort: 8004
