cloud/techchallenger-k8s/flags-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flags-postgres
  namespace: techchallenger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flags-postgres
  template:
    metadata:
      labels:
        app: flags-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: flags-postgres
  namespace: techchallenger
spec:
  selector:
    app: flags-postgres
  ports:
    - port: 5432
